--- a/package.json
+++ b/package.json
@@ -1,10 +1,63 @@
 {
-  "name": "@coreui/bootstrap-admin-template",
+  "name": "@coreui/free-bootstrap-admin-template",
   "version": "2.0.0-beta.0",
   "description": "Free Bootstrap Admin Template",
-  "main": "index.html",
+  "keywords": [
+    "admin",
+    "admin panel",
+    "admin template",
+    "bootstrap",
+    "css",
+    "dashboard",
+    "framework",
+    "front-end",
+    "responsive",
+    "sass",
+    "ui kit",
+    "webapp"
+  ],
+  "homepage": "https://coreui.io",
+  "bugs": {
+    "url": "https://github.com/coreui/free-bootstrap-admin-template/issues",
+    "email": "support@coreui.io"
+  },
+  "license": "MIT",
+  "author": {
+    "name": "Łukasz Holeczek",
+    "url": "http://holeczek.pl",
+    "github": "https://github.com/mrholek",
+    "twitter": "https://twitter.com/lukaszholeczek"
+  },
+  "contributors": [
+    {
+      "name": "Andrzej Kopański",
+      "url": "https://github.com/xidedix"
+    }
+  ],
+  "main": "src/index.html",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/coreui/free-bootstrap-admin-template.git"
+  },
+  "scripts": {
+    "build": "npm-run-all build-clean build-copy build-vendors",
+    "build-clean": "rimraf dist",
+    "build-copy": "copyfiles -a -e \"src/scss/**/*\" -u 1 \"src/**/*\" dist/",
+    "build-vendors": "node build/vendors.js",
+    "css": "npm-run-all --parallel css-compile* --sequential css-prefix css-minify*",
+    "css-compile": "node-sass --output-style expanded --source-map true --source-map-contents true --precision 6 src/scss/style.scss src/css/style.css",
+    "css-compile-vendors": "node-sass --output-style expanded --source-map true --source-map-contents true --precision 6 --recursive --output src/vendors/css src/scss/vendors/**/*",
+    "css-lint": "stylelint --config build/.stylelintrc --syntax scss \"src/scss/**/*.scss\"",
+    "css-minify": "cleancss --level 1 --source-map --source-map-inline-sources --output src/css/style.min.css src/css/style.css",
+    "css-minify-vendors": "foreach -g \"src/vendors/css/**/*.css\" -i \"src/vendors/css/**/*.min.css\" -x \"cleancss --level 1 --source-map --source-map-inline-sources #{path} --output #{dir}/#{name}.min#{ext}\" --no-c",
+    "css-prefix": "postcss --config build/postcss.config.js --replace \"src/css/*.css\" \"!src/css/*.min.css\"",
+    "css-prefix-vendors": "postcss --config build/postcss.config.js --replace \"src/vendors/css/**/*.css\" \"!src/vendors/css/**/*.css\"",
+    "localhost": "browser-sync start --server \"./src\" --serveStatic \"./\" --files \"./src/**/*, !./src/scss/**/*\"",
+    "serve": "npm-run-all --parallel localhost watch-css",
+    "watch-css": "nodemon --ignore dist/ -e scss -x \"npm run css\""
+  },
   "dependencies": {
-    "@coreui/core": "^2.0.0-beta.0",
+    "@coreui/coreui": "^2.0.0-beta.0",
     "@coreui/plugin-chartjs-custom-tooltips": "0.0.1",
     "bootstrap": "4.0.0",
     "chart.js": "^2.7.2",
@@ -35,45 +88,19 @@
     "stylelint-order": "^0.8.1",
     "stylelint-scss": "^2.5.0"
   },
-  "scripts": {
-    "build": "npm-run-all build-clean build-copy build-vendors",
-    "build-clean": "rimraf dist",
-    "build-copy": "copyfiles -a -e \"src/scss/**/*\" -u 1 \"src/**/*\" dist/",
-    "build-vendors": "node build/vendors.js",
-    "css": "npm-run-all --parallel css-compile* --sequential css-prefix css-minify*",
-    "css-compile": "node-sass --output-style expanded --source-map true --source-map-contents true --precision 6 src/scss/style.scss src/css/style.css",
-    "css-compile-vendors": "node-sass --output-style expanded --source-map true --source-map-contents true --precision 6 --recursive --output src/vendors/css src/scss/vendors/**/*",
-    "css-lint": "stylelint --config build/.stylelintrc --syntax scss \"src/scss/**/*.scss\"",
-    "css-minify": "cleancss --level 1 --source-map --source-map-inline-sources --output src/css/style.min.css src/css/style.css",
-    "css-minify-vendors": "foreach -g \"src/vendors/css/**/*.css\" -i \"src/vendors/css/**/*.min.css\" -x \"cleancss --level 1 --source-map --source-map-inline-sources #{path} --output #{dir}/#{name}.min#{ext}\" --no-c",
-    "css-prefix": "postcss --config build/postcss.config.js --replace \"src/css/*.css\" \"!src/css/*.min.css\"",
-    "css-prefix-vendors": "postcss --config build/postcss.config.js --replace \"src/vendors/css/**/*.css\" \"!src/vendors/css/**/*.css\"",
-    "localhost": "browser-sync start --server \"./src\" --serveStatic \"./\" --files \"./src/**/*, !./src/scss/**/*\"",
-    "serve": "npm-run-all --parallel localhost watch-css",
-    "watch-css": "nodemon --ignore dist/ -e scss -x \"npm run css\""
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/coreui/free-bootstrap-admin-template.git"
-  },
-  "bugs": {
-    "url": "https://github.com/coreui/free-bootstrap-admin-template/issues"
+  "engines": {
+    "node": ">=6"
   },
   "browserslist": [
+    "last 1 major version",
+    ">= 1%",
     "Chrome >= 45",
-    "Firefox ESR",
+    "Firefox >= 38",
     "Edge >= 12",
     "Explorer >= 10",
     "iOS >= 9",
     "Safari >= 9",
     "Android >= 4.4",
     "Opera >= 30"
-  ],
-  "author": "Łukasz Holeczek",
-  "contributors": [
-    "Andrzej Kopański"
-  ],
-  "homepage": "https://coreui.io",
-  "copyright": "Copyright 2018 creativeLabs Łukasz Holeczek",
-  "license": "MIT"
+  ]
 }
