--- a/package.json
+++ b/package.json
@@ -63,8 +63,8 @@
     "watch-js": "nodemon --watch src/js/src/ -x \"npm run js\""
   },
   "dependencies": {
-    "@coreui/coreui": "^2.0.0-beta.9",
-    "@coreui/coreui-plugin-chartjs-custom-tooltips": "1.0.0",
+    "@coreui/coreui": "^2.0.0-beta.10",
+    "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.2.0",
     "bootstrap": "4.1.0",
     "chart.js": "^2.7.2",
     "flag-icon-css": "3.0.0",
@@ -76,14 +76,14 @@
     "simple-line-icons": "2.4.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0-beta.44",
-    "@babel/core": "^7.0.0-beta.44",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.44",
-    "@babel/preset-env": "^7.0.0-beta.44",
+    "@babel/cli": "^7.0.0-beta.46",
+    "@babel/core": "^7.0.0-beta.46",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.46",
+    "@babel/preset-env": "^7.0.0-beta.46",
     "autoprefixer": "^8.3.0",
     "babel-eslint": "^8.2.3",
     "babel-plugin-transform-es2015-modules-strip": "^0.1.1",
-    "browser-sync": "2.23.6",
+    "browser-sync": "2.23.7",
     "clean-css-cli": "^4.1.11",
     "copyfiles": "^2.0.0",
     "cross-env": "^5.1.4",
