--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@coreui/coreui-free-bootstrap-admin-template",
-  "version": "2.1.0",
+  "version": "2.1.1",
   "description": "Free Bootstrap Admin Template",
   "keywords": [
     "admin",
@@ -63,10 +63,10 @@
     "watch-pug": "nodemon -e pug -x \"npm run pug\""
   },
   "dependencies": {
-    "@coreui/coreui": "2.0.3",
+    "@coreui/coreui": "2.0.4",
     "@coreui/coreui-plugin-chartjs-custom-tooltips": "1.2.0",
     "@coreui/icons": "0.3.0",
-    "bootstrap": "4.1.1",
+    "bootstrap": "4.1.2",
     "chart.js": "^2.7.2",
     "flag-icon-css": "3.0.0",
     "font-awesome": "4.7.0",
@@ -77,12 +77,12 @@
     "simple-line-icons": "2.4.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0-beta.46",
-    "@babel/core": "^7.0.0-beta.46",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.46",
-    "@babel/preset-env": "^7.0.0-beta.46",
+    "@babel/cli": "^7.0.0-beta.53",
+    "@babel/core": "^7.0.0-beta.53",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.53",
+    "@babel/preset-env": "^7.0.0-beta.53",
     "autoprefixer": "^8.4.1",
-    "babel-eslint": "^8.2.3",
+    "babel-eslint": "8.2.6",
     "babel-plugin-transform-es2015-modules-strip": "^0.1.1",
     "browser-sync": "2.24.4",
     "chalk": "^2.4.1",
@@ -90,10 +90,10 @@
     "copyfiles": "^2.0.0",
     "cross-env": "^5.1.4",
     "eslint": "^4.19.1",
-    "eslint-plugin-compat": "^2.2.0",
+    "eslint-plugin-compat": "2.5.0",
     "foreach-cli": "^1.8.0",
     "node-sass": "^4.9.0",
-    "nodemon": "^1.17.4",
+    "nodemon": "1.18.1",
     "npm-run-all": "^4.1.3",
     "postcss-cli": "^5.0.0",
     "pug": "^2.0.3",
