--- a/package.json
+++ b/package.json
@@ -63,47 +63,47 @@
     "watch-pug": "nodemon -e pug -x \"npm run pug\""
   },
   "dependencies": {
-    "@coreui/coreui": "2.0.4",
+    "@coreui/coreui": "2.0.6",
     "@coreui/coreui-plugin-chartjs-custom-tooltips": "1.2.0",
     "@coreui/icons": "0.3.0",
-    "bootstrap": "4.1.2",
+    "bootstrap": "4.1.3",
     "chart.js": "^2.7.2",
     "flag-icon-css": "3.0.0",
     "font-awesome": "4.7.0",
     "jquery": "3.3.1",
     "pace-progress": "1.0.2",
     "perfect-scrollbar": "1.4.0",
-    "popper.js": "1.14.3",
+    "popper.js": "1.14.4",
     "simple-line-icons": "2.4.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0-beta.53",
-    "@babel/core": "^7.0.0-beta.53",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.53",
-    "@babel/preset-env": "^7.0.0-beta.53",
-    "autoprefixer": "^8.4.1",
-    "babel-eslint": "8.2.6",
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "autoprefixer": "^9.1.5",
+    "babel-eslint": "^9.0.0",
     "babel-plugin-transform-es2015-modules-strip": "^0.1.1",
-    "browser-sync": "2.24.4",
+    "browser-sync": "^2.24.7",
     "chalk": "^2.4.1",
-    "clean-css-cli": "^4.1.11",
-    "copyfiles": "^2.0.0",
-    "cross-env": "^5.1.4",
-    "eslint": "^4.19.1",
-    "eslint-plugin-compat": "2.5.0",
+    "clean-css-cli": "^4.2.1",
+    "copyfiles": "^2.1.0",
+    "cross-env": "^5.2.0",
+    "eslint": "^5.5.0",
+    "eslint-plugin-compat": "^2.5.1",
     "foreach-cli": "^1.8.0",
-    "node-sass": "^4.9.0",
-    "nodemon": "1.18.1",
+    "node-sass": "^4.9.3",
+    "nodemon": "^1.18.4",
     "npm-run-all": "^4.1.3",
-    "postcss-cli": "^5.0.0",
+    "postcss-cli": "^6.0.0",
     "pug": "^2.0.3",
     "rimraf": "^2.6.2",
-    "shelljs": "^0.8.1",
-    "stylelint": "^9.2.0",
+    "shelljs": "^0.8.2",
+    "stylelint": "^9.5.0",
     "stylelint-config-recommended-scss": "^3.2.0",
     "stylelint-config-standard": "^18.2.0",
-    "stylelint-order": "^0.8.1",
-    "stylelint-scss": "^3.1.0"
+    "stylelint-order": "^1.0.0",
+    "stylelint-scss": "^3.3.0"
   },
   "engines": {
     "node": ">=6"
