--- a/package.json
+++ b/package.json
@@ -63,49 +63,49 @@
     "watch-pug": "nodemon -e pug -x \"npm run pug\""
   },
   "dependencies": {
-    "@coreui/coreui": "^2.1.3",
+    "@coreui/coreui": "^2.1.5",
     "@coreui/coreui-plugin-chartjs-custom-tooltips": "1.2.0",
     "@coreui/icons": "0.3.0",
-    "bootstrap": "4.1.3",
+    "bootstrap": "^4.2.1",
     "chart.js": "2.7.3",
-    "core-js": "^2.5.7",
+    "core-js": "^2.6.1",
     "flag-icon-css": "^3.2.1",
     "font-awesome": "4.7.0",
     "jquery": "3.3.1",
     "pace-progress": "1.0.2",
-    "perfect-scrollbar": "1.4.0",
-    "popper.js": "^1.14.5",
+    "perfect-scrollbar": "^1.4.0",
+    "popper.js": "^1.14.6",
     "simple-line-icons": "2.4.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.1.5",
-    "@babel/core": "^7.1.6",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
-    "@babel/preset-env": "^7.1.6",
-    "autoprefixer": "^9.3.1",
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-object-rest-spread": "^7.2.0",
+    "@babel/preset-env": "^7.2.3",
+    "autoprefixer": "^9.4.4",
     "babel-eslint": "^10.0.1",
     "babel-plugin-transform-es2015-modules-strip": "^0.1.1",
     "browser-sync": "^2.26.3",
-    "chalk": "^2.4.1",
+    "chalk": "^2.4.2",
     "clean-css-cli": "^4.2.1",
     "copyfiles": "^2.1.0",
     "cross-env": "^5.2.0",
-    "eslint": "^5.9.0",
+    "eslint": "^5.12.0",
     "eslint-plugin-compat": "^2.6.3",
     "foreach-cli": "^1.8.1",
-    "js-beautify": "^1.8.8",
-    "node-sass": "^4.10.0",
-    "nodemon": "^1.18.7",
+    "js-beautify": "^1.8.9",
+    "node-sass": "^4.11.0",
+    "nodemon": "^1.18.9",
     "npm-run-all": "^4.1.5",
-    "postcss-cli": "^6.0.1",
+    "postcss-cli": "^6.1.1",
     "pug": "^2.0.3",
-    "rimraf": "^2.6.2",
+    "rimraf": "^2.6.3",
     "shelljs": "^0.8.3",
-    "stylelint": "^9.8.0",
+    "stylelint": "^9.9.0",
     "stylelint-config-recommended-scss": "^3.2.0",
     "stylelint-config-standard": "^18.2.0",
     "stylelint-order": "^2.0.0",
-    "stylelint-scss": "^3.4.0"
+    "stylelint-scss": "^3.4.4"
   },
   "engines": {
     "node": ">=6"
