--- a/package.json
+++ b/package.json
@@ -79,13 +79,11 @@
     "@coreui/coreui": "next",
     "@coreui/coreui-chartjs": "2.0.0-alpha.0",
     "@coreui/icons": "0.4.1",
+    "@fortawesome/fontawesome-free": "^5.10.2",
     "chart.js": "^2.8.0",
     "flag-icon-css": "^3.3.0",
-    "font-awesome": "4.7.0",
-    "inline-source-cli": "^1.2.0",
     "pace-progress": "1.0.2",
-    "perfect-scrollbar": "1.4.0",
-    "simple-line-icons": "2.4.1"
+    "perfect-scrollbar": "1.4.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.6.0",
@@ -101,31 +99,30 @@
     "chalk": "^2.4.2",
     "clean-css-cli": "^4.3.0",
     "copyfiles": "^2.1.1",
-    "cross-env": "^5.2.1",
-    "eslint": "^6.3.0",
+    "cross-env": "^6.0.0",
+    "eslint": "^6.4.0",
     "eslint-config-xo": "^0.26.0",
     "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-unicorn": "^10.0.0",
+    "eslint-plugin-unicorn": "^11.0.1",
     "foreach-cli": "^1.8.1",
     "js-beautify": "^1.10.2",
     "jsdom": "^15.1.1",
     "minimist": "^1.2.0",
     "node-sass": "^4.12.0",
-    "nodemon": "^1.19.0",
+    "nodemon": "^1.19.2",
     "npm-run-all": "^4.1.5",
-    "postcss-cli": "^6.1.2",
-    "postcss-combine-duplicated-selectors": "^7.0.0",
+    "postcss-cli": "^6.1.3",
+    "postcss-combine-duplicated-selectors": "^8.0.2",
     "postcss-merge-rules": "^4.0.3",
     "pug": "^2.0.4",
     "rimraf": "^3.0.0",
     "shelljs": "^0.8.3",
-    "stylelint": "^10.1.0",
+    "stylelint": "^11.0.0",
     "stylelint-config-recommended-scss": "^3.3.0",
-    "stylelint-config-standard": "^18.3.0",
-    "stylelint-order": "^3.1.0",
-    "stylelint-scss": "^3.10.1",
-    "sync-glob": "^1.4.0",
-    "xmldom": "^0.1.27"
+    "stylelint-config-standard": "^19.0.0",
+    "stylelint-order": "^3.1.1",
+    "stylelint-scss": "^3.11.0",
+    "sync-glob": "^1.4.0"
   },
   "engines": {
     "node": ">=6"
