--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@coreui/coreui-free-bootstrap-admin-template",
-  "version": "3.0.0-rc.1",
+  "version": "3.0.0",
   "description": "Free Bootstrap Admin Template",
   "keywords": [
     "admin",
@@ -76,50 +76,51 @@
     "watch-views": "nodemon -e html -x \"npm-run-all --sequential copy-views build-vendors svg localhost-reload\""
   },
   "dependencies": {
-    "@coreui/coreui": "^3.0.0-rc.3",
     "@coreui/chartjs": "^2.0.0",
-    "@coreui/icons": "^1.0.0",
+    "@coreui/coreui": "^3.0.0",
+    "@coreui/icons": "^1.0.1",
     "@coreui/utils": "^1.2.2",
-    "chart.js": "^2.9.2",
-    "perfect-scrollbar": "1.4.0"
+    "@popperjs/core": "^2.0.6",
+    "chart.js": "^2.9.3",
+    "perfect-scrollbar": "1.5.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.7.0",
-    "@babel/core": "^7.7.2",
-    "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
-    "@babel/preset-env": "^7.7.1",
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.8.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.8.3",
+    "@babel/preset-env": "^7.8.4",
     "@coreui/svg-injector": "^1.0.0",
-    "@coreui/vendors-injector": "^1.0.1",
-    "autoprefixer": "^9.7.1",
+    "@coreui/vendors-injector": "^1.0.2",
+    "autoprefixer": "^9.7.4",
     "babel-eslint": "^10.0.3",
     "babel-plugin-transform-es2015-modules-strip": "^0.1.1",
     "browser-sync": "^2.26.7",
     "chalk": "^3.0.0",
     "clean-css-cli": "^4.3.0",
-    "copyfiles": "^2.1.1",
-    "cross-env": "^6.0.3",
-    "eslint": "^6.6.0",
-    "eslint-config-xo": "^0.27.2",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-unicorn": "^12.1.0",
+    "copyfiles": "^2.2.0",
+    "cross-env": "^7.0.0",
+    "eslint": "^6.8.0",
+    "eslint-config-xo": "^0.29.1",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-unicorn": "^16.1.1",
     "foreach-cli": "^1.8.1",
-    "js-beautify": "^1.10.2",
-    "jsdom": "^15.2.1",
+    "js-beautify": "^1.10.3",
+    "jsdom": "^16.2.0",
     "minimist": "^1.2.0",
-    "node-sass": "^4.13.0",
-    "nodemon": "^1.19.4",
+    "node-sass": "^4.13.1",
+    "nodemon": "^2.0.2",
     "npm-run-all": "^4.1.5",
-    "postcss-cli": "^6.1.3",
-    "postcss-combine-duplicated-selectors": "^8.0.3",
+    "postcss-cli": "^7.1.0",
+    "postcss-combine-duplicated-selectors": "^8.1.0",
     "postcss-merge-rules": "^4.0.3",
     "pug": "^2.0.4",
-    "rimraf": "^3.0.0",
+    "rimraf": "^3.0.2",
     "shelljs": "^0.8.3",
-    "stylelint": "^11.1.1",
-    "stylelint-config-recommended-scss": "^4.0.0",
-    "stylelint-config-standard": "^19.0.0",
-    "stylelint-order": "^3.1.1",
-    "stylelint-scss": "^3.12.1",
+    "stylelint": "^13.2.0",
+    "stylelint-config-recommended-scss": "^4.2.0",
+    "stylelint-config-standard": "^20.0.0",
+    "stylelint-order": "^4.0.0",
+    "stylelint-scss": "^3.14.2",
     "sync-glob": "^1.4.0"
   },
   "engines": {
