--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
 /.idea
 node_modules
 dist
+.DS_Store
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+
+# eslint cache
+.eslintcache
