--- a/package.json
+++ b/package.json
@@ -78,50 +78,51 @@
   },
   "dependencies": {
     "@coreui/chartjs": "^2.0.0",
-    "@coreui/coreui": "^3.2.0",
+    "@coreui/coreui": "^3.3.0",
     "@coreui/icons": "^2.0.0-beta.3",
-    "@coreui/utils": "^1.2.4",
-    "@popperjs/core": "^2.4.0",
-    "chart.js": "^2.9.3",
+    "@coreui/utils": "^1.3.1",
+    "@popperjs/core": "^2.5.4",
+    "chart.js": "^2.9.4",
     "perfect-scrollbar": "1.5.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.9.6",
-    "@babel/plugin-proposal-object-rest-spread": "^7.9.6",
-    "@babel/preset-env": "^7.9.6",
+    "@babel/cli": "^7.12.7",
+    "@babel/core": "^7.12.7",
+    "@babel/plugin-proposal-object-rest-spread": "^7.12.1",
+    "@babel/preset-env": "^7.12.7",
     "@coreui/svg-injector": "^1.0.0",
-    "@coreui/vendors-injector": "^1.0.2",
-    "autoprefixer": "^9.8.0",
+    "@coreui/vendors-injector": "^1.1.0",
+    "autoprefixer": "^10.0.2",
     "babel-eslint": "^10.1.0",
     "babel-plugin-transform-es2015-modules-strip": "^0.1.1",
-    "browser-sync": "^2.26.7",
-    "chalk": "^4.0.0",
+    "browser-sync": "^2.26.13",
+    "chalk": "^4.1.0",
     "clean-css-cli": "^4.3.0",
-    "copyfiles": "^2.2.0",
+    "copyfiles": "^2.4.0",
     "cross-env": "^7.0.2",
-    "eslint": "^7.0.0",
-    "eslint-config-xo": "^0.29.1",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-unicorn": "^20.0.0",
+    "eslint": "^7.14.0",
+    "eslint-config-xo": "^0.33.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-unicorn": "^23.0.0",
     "foreach-cli": "^1.8.1",
-    "js-beautify": "^1.11.0",
-    "jsdom": "^16.2.2",
+    "js-beautify": "^1.13.0",
+    "jsdom": "^16.4.0",
     "minimist": "^1.2.5",
-    "node-sass": "^4.14.1",
-    "nodemon": "^2.0.4",
+    "node-sass": "^5.0.0",
+    "nodemon": "^2.0.6",
     "npm-run-all": "^4.1.5",
-    "postcss-cli": "^7.1.1",
-    "postcss-combine-duplicated-selectors": "^8.1.0",
+    "postcss": "^8.1.9",
+    "postcss-cli": "^8.3.0",
+    "postcss-combine-duplicated-selectors": "^10.0.2",
     "postcss-merge-rules": "^4.0.3",
-    "pug": "^2.0.4",
+    "pug": "^3.0.0",
     "rimraf": "^3.0.2",
     "shelljs": "^0.8.4",
-    "stylelint": "^13.5.0",
+    "stylelint": "^13.8.0",
     "stylelint-config-recommended-scss": "^4.2.0",
     "stylelint-config-standard": "^20.0.0",
-    "stylelint-order": "^4.0.0",
-    "stylelint-scss": "^3.17.2",
+    "stylelint-order": "^4.1.0",
+    "stylelint-scss": "^3.18.0",
     "sync-glob": "^1.4.0"
   },
   "engines": {
