--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
     "js-beautify": "^1.13.0",
     "jsdom": "^16.4.0",
     "minimist": "^1.2.5",
+    "mkdirp": "^1.0.4",
     "node-sass": "^5.0.0",
     "nodemon": "^2.0.6",
     "npm-run-all": "^4.1.5",
