--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@coreui/coreui-free-bootstrap-admin-template",
-  "version": "3.4.0",
+  "version": "4.0.0-alpha.0",
   "description": "Free Bootstrap Admin Template",
   "keywords": [
     "admin",
@@ -34,7 +34,7 @@
       "url": "https://github.com/orgs/coreui/people"
     }
   ],
-  "main": "src/index.html",
+  "main": "dist/index.html",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/coreui/coreui-free-bootstrap-admin-template.git"
@@ -47,9 +47,9 @@
     "build-from-pug": "npm-run-all build-clean --parallel css js copy-assets pug-dist --sequential build-vendors",
     "copy": "npm-run-all --parallel copy-*",
     "copy-assets": "copyfiles -a -u 1 \"src/assets/**/*\" dist/",
-    "copy-views": "copyfiles -a -u 1 \"src/**/*.html\" dist/",
+    "copy-views": "copyfiles -a -u 1 \"src/views/**/*.html\" dist/",
     "css": "npm-run-all --parallel css-compile* --sequential css-prefix css-minify*",
-    "css-compile": "node-sass --quiet --output-style expanded --source-map true --source-map-contents true --precision 8 src/scss/style.scss dist/css/style.css",
+    "css-compile": "sass --style expanded --source-map --embed-sources --no-error-css --load-path=node_modules/ src/scss/:dist/css/",
     "css-compile-vendors": "node build/vendors-sass.js",
     "css-lint": "stylelint --config build/.stylelintrc --syntax scss \"src/scss/**/*.scss\"",
     "css-minify": "cleancss --level 1 --source-map --source-map-inline-sources --output dist/css/style.min.css dist/css/style.css",
@@ -59,10 +59,9 @@
     "js-lint": "eslint src/js/src",
     "js-minify": "foreach -g \"dist/js/**/*.js\" -x \"uglifyjs --compress typeofs=false --mangle  --source-map \"content=src/js/#{name}.js.map,includeSources,url=#{name}.min.js.map\" --output dist/js/#{name}.min.js dist/js/#{name}.js\"",
     "localhost": "browser-sync start --server \"./dist\" --serveStatic \"./\" --files \"./dist/\"",
-    "localhost-reload": "browser-sync reload",
     "pug": "npm-run-all --parallel pug-*",
-    "pug-dist": "node build/pug.js --src pug/ --dest dist/",
-    "pug-src": "node build/pug.js --src pug/ --dest src/",
+    "pug-dist": "node build/pug.js --src src/pug/views/ --dest dist/",
+    "pug-src": "node build/pug.js --src src/pug/views/ --dest src/",
     "release-version": "node build/change-version.js",
     "serve": "npm-run-all --sequential build-clean css js copy --parallel localhost watch",
     "serve-dist": "serve dist",
@@ -72,14 +71,14 @@
     "watch": "npm-run-all --parallel watch-*",
     "watch-assets": "nodemon --watch src/assets -x \"npm run sync-assets\"",
     "watch-css": "nodemon -e scss -x \"npm run css\"",
-    "watch-html": "nodemon --watch src -e html -x \"npm run copy-views\"",
+    "watch-html": "nodemon --watch src/views -e html -x \"npm run copy-views\"",
     "watch-js": "nodemon --watch src/js -x \"npm run js\"",
-    "watch-pug": "nodemon --watch pug -e pug -x \"npm run pug-dist\"",
+    "watch-pug": "nodemon --watch src/pug -e pug -x \"npm run pug-dist\"",
     "zip": "git archive -o coreui-free-bootstrap-admin-template-v$npm_package_version.zip -9 HEAD"
   },
   "dependencies": {
     "@coreui/chartjs": "^2.0.0",
-    "@coreui/coreui": "^3.4.0",
+    "@coreui/coreui": "^4.0.0-alpha.0",
     "@coreui/icons": "^2.0.0-beta.3",
     "@coreui/utils": "^1.3.1",
     "@popperjs/core": "^2.5.4",
@@ -119,6 +118,7 @@
     "postcss-merge-rules": "^4.0.3",
     "pug": "^3.0.0",
     "rimraf": "^3.0.2",
+    "sass": "^1.32.5",
     "shelljs": "^0.8.4",
     "stylelint": "^13.8.0",
     "stylelint-config-recommended-scss": "^4.2.0",
